# website

./: ().py  .env.template  LICENSE  README.md  app.py  catalog.html  category.html  contacts.html  index.html  products_proj.json  pyproject.toml  requirements.txt
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: forms.py  mixins.py  services.py  urls.py  views.py
catalog/management/commands/: create_groups.py
catalog/templates/catalog/: category_products.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
products_proj/: admin.py  apps.py  models.py  urls.py  views.py
products_proj/management/commands/: load_test_data.py
products_proj/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py
store/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  catalog.html  category.html  contacts.html  home.html  index.html  product_detail.html
templates/includes/: menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
users/templates/users/: login.html  register.html
