[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["slav <vrazumihindima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
flake8 = "^7.3.0"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
